--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chroma-js": "^2.1.0",
+    "immutability-helper": "^3.0.1",
     "rc-slider": "^8.7.1",
     "react": "^16.12.0",
     "react-color": "^2.18.0",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^5.1.2",
