--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-transition-group": "^4.3.0",
-    "uuid": "^3.3.3"
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
