--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^16.12.0",
     "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
